# rir-generator.rs

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
rir_generator/: Cargo.toml
rir_generator/src/: lib.rs  rir.rs
rir_generator_py/: Cargo.toml  pyproject.toml
rir_generator_py/python/rir_generator_py/: __init__.py
rir_generator_py/python/tests/: test_all.py
rir_generator_py/src/: lib.rs
src/: lib.rs  python.rs  rir.rs
