[package]
name = "rir_generator_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rir_generator_py"
crate-type = ["cdylib"]

[dependencies]
rir_generator = { path = "../rir_generator" }
pyo3 = "0.19.0"
