[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "rir_generator_py"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "rir_generator @ git+https://github.com/audiolabs/rir-generator.git",
]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
